# RDMALearning

client/: CMakeLists.txt  main.cpp
client/hostfile/: hostinfo.txt
client/include/network/: RDMA.hpp  tcp.hpp
client/include/tools/: ThreadPool.hpp
client/src/network/: CMakeLists.txt  RDMA.cpp  tcp.cpp
server/: CMakeLists.txt  main.cpp
server/hostfile/: hostinfo_ib.txt
server/include/network/: RDMA.hpp
server/src/tools/: CMakeLists.txt  ThreadPool.cpp
